Started working on the Arduino code. Made the arduino sender relay messages from serial to the transmitter and robot parse these messages.

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,7 @@ fabric.properties
 # Sonarlint plugin
 
 # End of https://www.gitignore.io/api/pycharm,intellij,platformio
+**.DS_Store
+robot/.travis.yml
+arduino_sender/.travis.yml
+
